syntax = "proto3";

package file;

option go_package = "proto/;file";

service Service {
  rpc UploadFile(stream FileChunk) returns (UploadResponse) {}
  rpc DownloadFile(DownloadRequest) returns (stream FileChunk) {}
  rpc ListFiles(Empty) returns (FileList) {}
}

message FileChunk {
  bytes data = 1;
  string filename = 2;
}

message UploadResponse {
  string filename = 1;
  int64 size = 2;
}

message DownloadRequest {
  string filename = 1;
}

message FileInfo {
  string filename = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
}

message FileList {
  repeated FileInfo files = 1;
}

message Empty {}